--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,29 @@ license = "Apache-2.0"
 repository = "https://github.com/paritytech/parity-scale-codec"
 categories = ["encoding"]
 edition = "2018"
+exclude = [
+    ".gitignore",
+    ".travis.yml",
+    "deploy.sh",
+    "benches/**/*",
+    "tests/**/*",
+    "/sgx/*",
+]
 
 [dependencies]
 arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }
-serde = { version = "1.0.102", optional = true }
-parity-scale-codec-derive = { path = "derive", version = "^1.0.2", default-features = false, optional = true }
-bitvec = { version = "0.15", default-features = false, features = ["alloc"], optional = true }
-byte-slice-cast = { version = "0.3.4", default-features = false, optional = true }
+serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", optional = true } # serde = { version = "1.0", optional = true }
+parity-scale-codec-derive = { path = "derive", version = "^1.0.2", optional = true }
+bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx.git", optional = true }
+byte-slice-cast = { git = "https://github.com/mesalock-linux/byte-slice-cast-sgx.git", optional = true }
 generic-array = { version = "0.13.2", optional = true }
+sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 
 [dev-dependencies]
-criterion = "0.3.0"
-serde_derive = { version = "1.0" }
-parity-scale-codec-derive = { path = "derive", version = "^1.0.2", default-features = false }
-quickcheck = "0.9"
+#criterion = "0.3.0"
+#serde_derive = { version = "1.0" }
+#parity-scale-codec-derive = { path = "derive", version = "^1.0.2", default-features = false }
+#quickcheck = "0.9"
 
 [[bench]]
 name = "benches"
@@ -30,10 +39,11 @@ harness = false
 bench = false
 
 [features]
-default = ["std"]
+default = ["std", "mesalock_sgx"]
 derive = ["parity-scale-codec-derive"]
-std = ["serde", "bitvec/std", "byte-slice-cast/std"]
+std = ["mesalock_sgx", "serde", "bitvec/std", "byte-slice-cast/std"]
 bit-vec = ["bitvec", "byte-slice-cast"]
+mesalock_sgx = ["sgx_tstd"]
 
 # WARNING: DO _NOT_ USE THIS FEATURE IF YOU ARE WORKING ON CONSENSUS CODE!*
 #
@@ -42,8 +52,8 @@ bit-vec = ["bitvec", "byte-slice-cast"]
 # that can be found in std and/or alloc.
 full = []
 
-[workspace]
-members = [
-	"derive",
-	"fuzzer",
-]
+#[workspace]
+#members = [
+#	"derive",
+#	"fuzzer",
+#]
