--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -14,7 +14,9 @@ syn = { version = "0.15.31", features = [ "full", "visit" ] }
 quote = "0.6"
 proc-macro2 = "0.4"
 proc-macro-crate = "0.1.3"
+sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
 
 [features]
-default = ["std"]
-std = []
+default = ["std", "mesalock_sgx"]
+std = ["mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
