--- a/sgx/parity-scale-codec-sgx-test/enclave/Cargo.toml
+++ b/sgx/parity-scale-codec-sgx-test/enclave/Cargo.toml
@@ -13,13 +13,11 @@ std = []
 
 [dependencies]
 parity-scale-codec = { path = "../../..", features = ["std", "bit-vec", "generic-array", "derive"] }
-serde = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
-serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
+serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["derive"] }
 parity-scale-codec-derive = { path = "../../../derive", version = "^1.0.2" }
-criterion = "0.2"
-bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx.git", tag = "sgx_1.0.9" }
+bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx.git" }
 typenum = "1.10"
-byte-slice-cast = { git = "https://github.com/mesalock-linux/byte-slice-cast-sgx.git", tag = "sgx_1.0.9" }
+byte-slice-cast = { git = "https://github.com/mesalock-linux/byte-slice-cast-sgx.git" }
 arrayvec = { version = "0.4", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }
 generic-array = { version = "0.12" }
 
