--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ exclude = [
 
 [dependencies]
 arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-33-128", "array-sizes-129-255"] }
-serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", optional = true } # serde = { version = "1.0", optional = true }
+serde = { git = "https://github.com/mesalock-linux/serde-sgx", optional = true } # serde = { version = "1.0", optional = true }
 parity-scale-codec-derive = { path = "derive", version = "^1.0.2", optional = true }
-bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx.git", optional = true }
-byte-slice-cast = { git = "https://github.com/mesalock-linux/byte-slice-cast-sgx.git", optional = true }
+bitvec = { git = "https://github.com/mesalock-linux/bitvec-sgx", optional = true }
+byte-slice-cast = { git = "https://github.com/mesalock-linux/byte-slice-cast-sgx", optional = true }
 generic-array = { version = "0.13.2", optional = true }
 sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 
